--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,135 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Estilos para o tabuleiro */
+.game-board {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.board-row {
+  display: flex;
 }
+
+/* Estilos para as células */
+.square {
+  background: #ffffff;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 120px;
+  padding: 0px;
+  text-align: center;
+  width: 120px;
+  border-radius: 8px;
+  margin: .4vh;
+  transition: 0.3s;
+}
+
+
+
+.square:focus {
+  outline: none;
+}
+
+/* Estilo para o botão de reiniciar */
+.game-info {
+  margin-top: 20px;
+  margin-right: 2em;
+  margin-left: 2em;
+}
+
+/* Estilos para os botões de movimento */
+.game-info ol {
+  list-style: none;
+  padding-left: 0;
+}
+
+.game-info ol>li {
+  margin-top: 10px;
+}
+
+.game-info ol>li button {
+  font-size: 14px;
+  padding: 5px 10px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.game-info ol>li button:hover {
+  background-color: #0056b3;
+}
+
+/* Estilos para o status */
+.status {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* Estilo para o status do vencedor */
+.status.winner {
+  color: green;
+}
+
+/* Estilo para o status do próximo jogador */
+.status.next-player {
+  color: blue;
+}
+.botao{
+ background-color: #98141c;
+ color: #e9d9c9;
+ border: none;
+ margin: .9em;
+ padding: .7em;
+ border-radius: 8px;
+}
+
+body {
+  background-color: #e9d9c9;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+  color: #98141c;
+  font-size: 24px;
+}
+
+.game {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 5em;
+  border-radius: 20px;
+}
+
+.Jogador {
+  color: #98141c;
+  font-size: 2.5em;
+}
+
+.square:hover {
+  background-color: rgb(149, 143, 149);
+}
+li>button {
+  color: #e9d9c9;
+  background-color: #98141c;
+  border-radius: 5px;
+  border: none;
+  padding: 5px;
+}
+
+.placar {
+  font-size: 2em;
+  color: #98141c;
+}
+
+.game-info {
+  color:#98141c;
+  font-size: 1em;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
